moving the list node can affect the last-child, causing spacing side effects - so we reset all para spacing in the context menu to avoid that

--- a/src/context-menu/css/objects/_honeycomb.context-menu.objects.scss
+++ b/src/context-menu/css/objects/_honeycomb.context-menu.objects.scss
@@ -1,5 +1,11 @@
 .js-context-menu {
     position: relative;
+
+    // Moving the list node can affect the last-child, which can cause spacing side-effects with paragraphs.
+    // To avoid that we unset all paragraph spacing here. 
+    p, p:last-child {
+        @include margin(0, 'bottom');
+    }
 }
 
 .js-context-menu__list {
